--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "clue",
   "version": "4.4.0",
-  "description": "嘉晟CRM",
+  "description": "APP-CRM",
   "author": "chenfu",
   "scripts": {
     "dev": "vue-cli-service serve",
